--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -62,6 +62,7 @@ body {
       cursor: pointer;
       display: none;
 
+
       &:hover {
         color: $main-color;
         text-shadow: 0 0 10px $main-color, 0 0 20px $main-color,
@@ -76,7 +77,7 @@ body {
         font-size: 2rem;
         color: $text-color;
         font-weight: 500;
-        margin-left: 3.5rem;
+        margin-left: 3rem;
         transition: 0.3s;
         transition: text-shadow 0.3s ease;
 
@@ -167,7 +168,7 @@ body {
     .home-content {
       max-width: 70rem;
 
-      h1 {
+      #I {
         font-size: 5.6rem;
         font-weight: 700;
         line-height: 1.5;
@@ -675,7 +676,7 @@ body {
     position: relative;
     background: linear-gradient(to top, $bg-secundary, $bg-primary);
     padding: 0 10%;
-    padding-top: 13rem;
+    padding-top: 12rem;
     padding-bottom: 5rem;
 
     #MY {
@@ -690,7 +691,7 @@ body {
     }
 
     .projects-container {
-      margin-top: 2.5rem;
+      margin-top: 1.5rem;
       justify-content: center;
       display: flex;
       flex-wrap: wrap;
@@ -913,8 +914,8 @@ body {
     position: relative;
     background: linear-gradient(to bottom, $bg-secundary, $bg-primary);
     padding: 0 10%;
-    padding-top: 10rem;
-    padding-bottom: 7rem;
+    padding-top: 12rem;
+    padding-bottom: 5rem;
 
     #contact {
       text-align: center;
@@ -944,6 +945,7 @@ body {
           margin: 0.8rem 0;
 
           input {
+            position: relative;
             width: 100%;
             height: 100%;
             padding: 1.5rem;
@@ -952,10 +954,29 @@ body {
             background: transparent;
             border-radius: 0.6rem;
             border: solid $main-color 2px;
+            z-index: 2;
 
             &::placeholder {
               color: $text-color;
             }
+
+            &:focus,
+            &:valid {
+              ~ .focus {
+                width: 100%;
+              }
+            }
+          }
+
+          .focus {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 0%;
+            height: 100%;
+            background: $bg-secundary;
+            z-index: 1;
+            transition: 0.5s;
           }
         }
       }
@@ -966,6 +987,7 @@ body {
         display: flex;
 
         textarea {
+          position: relative;
           width: 100%;
           height: 100%;
           padding: 1.5rem;
@@ -975,10 +997,29 @@ body {
           border-radius: 0.6rem;
           resize: none;
           border: solid $main-color 2px;
+          z-index: 2;
 
           &::placeholder {
             color: $text-color;
           }
+
+          &:focus,
+          &:valid {
+            ~ .focus {
+              width: 100%;
+            }
+          }
+        }
+
+        .focus {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 0%;
+          height: 100%;
+          background: $bg-secundary;
+          z-index: 1;
+          transition: 0.5s;
         }
       }
 
@@ -1005,13 +1046,70 @@ body {
           transition: box-shadow 0.3s ease;
 
           &:hover {
-            box-shadow: 0 0 2.5 rem $main-color;
+            box-shadow: 0 0 2.5rem $main-color;
             color: $text-color;
             background: linear-gradient(to bottom, $main-color, #009cd9);
           }
         }
       }
+    }
+  }
 
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 2rem 9%;
+
+    .footer-text {
+      p {
+        font-size: 1.6rem;
+      }
+    }
+
+    .footer-iconTop {
+      a {
+        position: relative;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0.8rem;
+        background: $main-color;
+        border: solid 0.2rem $main-color;
+        border-radius: 0.6rem;
+        text-decoration: none;
+        z-index: 1;
+        overflow: hidden;
+
+        &::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 0%;
+          height: 100%;
+          background: $bg-secundary;
+          transition: 0.5s;
+          z-index: -1;
+        }
+
+        &:hover {
+          &::before {
+            width: 100%;
+          }
+
+          i {
+            color: $main-color;
+          }
+        }
+
+        i {
+          font-size: 2.4rem;
+          color: $bg-primary;
+          transition: 0.5s;
+        }
+      }
     }
   }
 }
@@ -1058,5 +1156,32 @@ body {
   }
 }
 
-@media (hover) {
+@media (max-width: 1200px){
+html{
+  font-size: 55% !important;
 }
+}
+
+@media (max-width: 991px){
+  .header{
+    padding: 0 4% !important;
+  }
+
+  section{
+    padding: 10rem 4% 2rem !important;
+  }
+
+  .Home{
+    padding: 0 4% !important;
+  }
+
+  .footer{
+    padding: 2rem 4% !important;
+  }
+  }
+
+  @media (max-width: 768px){
+    #menu-icon{
+     display: block !important;
+    }
+    }
