--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -63,7 +63,8 @@ body {
       display: none;
 
 
-      &:hover {
+      &:hover,
+      &:active  {
         color: $main-color;
         text-shadow: 0 0 10px $main-color, 0 0 20px $main-color,
           0 0 30px $main-color;
@@ -81,7 +82,8 @@ body {
         transition: 0.3s;
         transition: text-shadow 0.3s ease;
 
-        &:hover {
+        &:hover,
+        &:active  {
           color: $main-color;
           text-shadow: 0 0 10px $main-color, 0 0 20px $main-color,
             0 0 30px $main-color;
@@ -237,7 +239,8 @@ body {
         transition: 0.3s;
         transition: box-shadow 0.3s ease;
 
-        &:hover {
+        &:hover,
+        &:active  {
           box-shadow: 0 0 5rem $main-color;
           color: $text-color;
           background: linear-gradient(to bottom, $main-color, #009cd9);
@@ -502,7 +505,8 @@ body {
             i {
               color: #e44d26;
             }
-            &:hover {
+            &:hover,
+            &:active  {
               .icon {
                 cursor: pointer;
                 background-color: #e44d26;
@@ -524,7 +528,8 @@ body {
             i {
               color: #2d92cd;
             }
-            &:hover {
+            &:hover,
+            &:active  {
               .icon {
                 cursor: pointer;
                 background-color: #2d92cd;
@@ -546,7 +551,8 @@ body {
             i {
               color: #f0c02b;
             }
-            &:hover {
+            &:hover,
+            &:active  {
               .icon {
                 cursor: pointer;
                 background-color: #f0c02b;
@@ -566,7 +572,8 @@ body {
 
           #C {
             filter: grayscale(50%);
-            &:hover {
+            &:hover,
+            &:active  {
               filter: grayscale(0%);
               .icon {
                 cursor: pointer;
@@ -584,7 +591,8 @@ body {
 
           #JAVA {
             filter: grayscale(50%);
-            &:hover {
+            &:hover,
+            &:active  {
               filter: grayscale(0%);
               .icon {
                 cursor: pointer;
@@ -612,7 +620,8 @@ body {
           i {
             color: white;
           }
-          &:hover {
+          &:hover,
+          &:active  {
             .icon {
               cursor: pointer;
               background-color: #702df5;
@@ -639,7 +648,8 @@ body {
           i {
             color: #cd669a;
           }
-          &:hover {
+          &:hover,
+          &:active  {
             .icon {
               cursor: pointer;
               background-color: #cd669a;
@@ -831,7 +841,8 @@ body {
                     font-size: 2.5rem;
                   }
 
-                  &:hover {
+                  &:hover,
+                  &:active  {
                     box-shadow: 0 0 1rem 0.5rem $main-color;
                     color: $text-color;
                   }
@@ -840,7 +851,8 @@ body {
             }
           }
 
-          &:hover {
+          &:hover,
+          &:active {
             box-shadow: 0 0 1rem 0.5rem $main-color;
             transform: scale(1.05);
             cursor: pointer;
@@ -898,7 +910,8 @@ body {
             color: $main-color;
             text-decoration: none;
 
-            &:hover {
+            &:hover,
+            &:active  {
               box-shadow: 0 0 3rem $main-color;
               color: $text-color;
               background: linear-gradient(to bottom, $main-color, #009cd9);
@@ -1045,7 +1058,8 @@ body {
           transition: 0.3s;
           transition: box-shadow 0.3s ease;
 
-          &:hover {
+          &:hover,
+          &:active  {
             box-shadow: 0 0 2.5rem $main-color;
             color: $text-color;
             background: linear-gradient(to bottom, $main-color, #009cd9);
@@ -1094,7 +1108,8 @@ body {
           z-index: -1;
         }
 
-        &:hover {
+        &:hover,
+        &:active  {
           &::before {
             width: 100%;
           }
