--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -62,8 +62,7 @@ body {
       cursor: pointer;
       display: none;
 
-      &:hover,
-      &:active {
+      &:hover {
         color: $main-color;
         text-shadow: 0 0 10px $main-color, 0 0 20px $main-color,
           0 0 30px $main-color;
@@ -81,8 +80,7 @@ body {
         transition: 0.3s;
         transition: text-shadow 0.3s ease;
 
-        &:hover,
-        &:active {
+        &:hover {
           color: $main-color;
           text-shadow: 0 0 10px $main-color, 0 0 20px $main-color,
             0 0 30px $main-color;
@@ -237,8 +235,7 @@ body {
         transition: 0.3s;
         transition: box-shadow 0.3s ease;
 
-        &:hover,
-        &:active {
+        &:hover {
           box-shadow: 0 0 5rem $main-color;
           color: $text-color;
           background: linear-gradient(to bottom, $main-color, #009cd9);
@@ -503,8 +500,7 @@ body {
             i {
               color: #e44d26;
             }
-            &:hover,
-            &:active {
+            &:hover {
               .icon {
                 cursor: pointer;
                 background-color: #e44d26;
@@ -526,8 +522,7 @@ body {
             i {
               color: #2d92cd;
             }
-            &:hover,
-            &:active {
+            &:hover{
               .icon {
                 cursor: pointer;
                 background-color: #2d92cd;
@@ -549,8 +544,7 @@ body {
             i {
               color: #f0c02b;
             }
-            &:hover,
-            &:active {
+            &:hover{
               .icon {
                 cursor: pointer;
                 background-color: #f0c02b;
@@ -570,8 +564,7 @@ body {
 
           #C {
             filter: grayscale(50%);
-            &:hover,
-            &:active {
+            &:hover {
               filter: grayscale(0%);
               .icon {
                 cursor: pointer;
@@ -589,8 +582,7 @@ body {
 
           #JAVA {
             filter: grayscale(50%);
-            &:hover,
-            &:active {
+            &:hover {
               filter: grayscale(0%);
               .icon {
                 cursor: pointer;
@@ -618,8 +610,7 @@ body {
           i {
             color: white;
           }
-          &:hover,
-          &:active {
+          &:hover {
             .icon {
               cursor: pointer;
               background-color: #702df5;
@@ -646,8 +637,7 @@ body {
           i {
             color: #cd669a;
           }
-          &:hover,
-          &:active {
+          &:hover{
             .icon {
               cursor: pointer;
               background-color: #cd669a;
@@ -709,6 +699,7 @@ body {
         flex-wrap: wrap;
 
         .item {
+          width: 100%;
           display: flex;
           justify-content: center;
         }
@@ -839,8 +830,7 @@ body {
                     font-size: 2.5rem;
                   }
 
-                  &:hover,
-                  &:active {
+                  &:hover {
                     box-shadow: 0 0 1rem 0.5rem $main-color;
                     color: $text-color;
                   }
@@ -849,8 +839,7 @@ body {
             }
           }
 
-          &:hover,
-          &:active {
+          &:hover {
             box-shadow: 0 0 1rem 0.5rem $main-color;
             transform: scale(1.05);
             cursor: pointer;
@@ -908,8 +897,7 @@ body {
             color: $main-color;
             text-decoration: none;
 
-            &:hover,
-            &:active {
+            &:hover{
               box-shadow: 0 0 3rem $main-color;
               color: $text-color;
               background: linear-gradient(to bottom, $main-color, #009cd9);
@@ -1056,8 +1044,7 @@ body {
           transition: 0.3s;
           transition: box-shadow 0.3s ease;
 
-          &:hover,
-          &:active {
+          &:hover {
             box-shadow: 0 0 2.5rem $main-color;
             color: $text-color;
             background: linear-gradient(to bottom, $main-color, #009cd9);
@@ -1106,8 +1093,7 @@ body {
           z-index: -1;
         }
 
-        &:hover,
-        &:active {
+        &:hover {
           &::before {
             width: 100%;
           }
