--- a/sass-css/Styles.css
+++ b/sass-css/Styles.css
@@ -419,6 +419,7 @@ body .SKills .skill-container .lenguages {
 }
 body .SKills .skill-container .lenguages .owl-carousel-2 {
   display: flex;
+  width: 100%;
   height: 25rem;
 }
 body .SKills .skill-container .lenguages .owl-carousel-2 .item {
@@ -962,5 +963,10 @@ body .footer .footer-iconTop a i {
 @keyframes RotationAbout2 {
   100% {
     transform: translate(-50%, -50%) rotate(-360deg);
+  }
+}
+@media (max-width: 1200) {
+  html {
+    font-size: 55%;
   }
 }/*# sourceMappingURL=Styles.css.map */
