--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -489,11 +489,14 @@ body {
 
         .owl-carousel-2 {
           display: flex;
+          width: 100%;
           height: 25rem;
+          
 
           .item {
             display: flex;
             justify-content: center;
+            
           }
 
           #HTML {
@@ -1154,4 +1157,12 @@ body {
     transform: translate(-50%, -50%) rotate(-360deg);
   }
 }
+
+@media (max-width: 1200){
+  html{
+    font-size: 55%;
+  }
+}
+
+
 
