--- a/sass-css/Styles.css
+++ b/sass-css/Styles.css
@@ -60,15 +60,16 @@ body .header .navbar {
   animation: Dtop 1.5s ease-in-out;
 }
 body .header .navbar a {
+  display: flex;
   text-decoration: none;
   font-size: 2rem;
   color: white;
-  font-weight: 500;
+  font-weight: 700;
   margin-left: 3rem;
   transition: 0.3s;
   transition: text-shadow 0.3s ease;
 }
-body .header .navbar a:hover, body .header .navbar a:active {
+body .header .navbar a:hover {
   color: #00b7ff;
   text-shadow: 0 0 10px #00b7ff, 0 0 20px #00b7ff, 0 0 30px #00b7ff;
 }
@@ -77,21 +78,21 @@ body .header .navbar .active {
   text-shadow: 0 0 10px #00b7ff, 0 0 20px #00b7ff, 0 0 30px #00b7ff;
 }
 body .Home {
+  position: relative;
   min-height: 100vh;
   background: linear-gradient(to top, #0e2336, black);
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   padding: 0 10%;
-  position: relative;
 }
 body .Home .Foto {
   display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
-  top: 27%;
-  left: 64%;
+  top: 25%;
+  left: 62%;
   margin: 0;
   width: 40rem;
   height: 40rem;
@@ -102,8 +103,8 @@ body .Home .Foto {
 body .Home .Foto img {
   box-shadow: 0 0 10px 5px #00b7ff;
   border-radius: 50%;
-  width: 360px;
-  height: 360px;
+  width: 36rem;
+  height: 36rem;
   transition: 0.5s;
 }
 body .Home .Foto .circle-spin {
@@ -135,10 +136,11 @@ body .Home .Foto .circle-spin2 {
   animation: RotationAbout2 8s linear infinite;
 }
 body .Home .home-content {
+  width: 100%;
   max-width: 70rem;
 }
 body .Home .home-content #I {
-  font-size: 5.6rem;
+  font-size: 5rem;
   font-weight: 700;
   line-height: 1.5;
 }
@@ -207,11 +209,10 @@ body .Home .btn-box .btn:hover, body .Home .btn-box .btn:active {
 }
 body .Home .home-rds {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
   position: absolute;
-  bottom: 4rem;
-  width: 20rem;
+  bottom: 5%;
+  width: 100%;
+  gap: 2rem;
 }
 body .Home .home-rds a {
   position: relative;
@@ -278,7 +279,7 @@ body .About .about-content #carouselExample .card {
   max-width: 100rem;
 }
 body .About .about-content #carouselExample .card h1 {
-  font-size: 24pt;
+  font-size: 4rem;
 }
 body .About .about-content #carouselExample .card .image-container {
   position: relative;
@@ -288,8 +289,8 @@ body .About .about-content #carouselExample .card .image-container {
 body .About .about-content #carouselExample .card .image-container img {
   box-shadow: 0 0 10px 5px #00b7ff;
   border-radius: 50%;
-  max-width: 225px;
-  height: 225px;
+  max-width: 22.5rem;
+  height: 22.5rem;
   transition: 0.5s;
   margin: 2rem 0;
 }
@@ -366,14 +367,14 @@ body .SKills .skill-container {
 }
 body .SKills .skill-container #ln {
   padding: 2rem;
-  font-size: 22pt;
+  font-size: 3rem;
   margin: auto;
   margin-top: 2rem;
 }
 body .SKills .skill-container #FW,
 body .SKills .skill-container #PR {
   padding: 2rem;
-  font-size: 22pt;
+  font-size: 3rem;
   margin: auto;
 }
 body .SKills .skill-container .card {
@@ -395,7 +396,7 @@ body .SKills .skill-container .card .icon {
   z-index: 1;
 }
 body .SKills .skill-container .card .icon i {
-  font-size: 130px;
+  font-size: 13rem;
 }
 body .SKills .skill-container .card .icon img {
   width: 13rem;
@@ -409,7 +410,7 @@ body .SKills .skill-container .card .Stitle {
 }
 body .SKills .skill-container .card .Stitle h5 {
   color: white;
-  font-size: 17pt;
+  font-size: 2rem;
   font-weight: bold;
   margin-top: 1rem;
 }
@@ -630,9 +631,13 @@ body .Projects .projects-container .owl-carousel-1 .card .card-container .card-b
   transform: scaleX(0);
   transition: all 0.3s ease-in-out;
 }
+body .Projects .projects-container .owl-carousel-1 .card .card-container .card-body .card-title {
+  font-size: 2.5rem;
+}
 body .Projects .projects-container .owl-carousel-1 .card .card-container .card-body .card-text {
   opacity: 0;
   transition: opacity 1s ease-in-out;
+  font-size: 1rem;
   text-align: justify;
 }
 body .Projects .projects-container .owl-carousel-1 .card .card-container .card-body #Spans {
@@ -900,7 +905,7 @@ body .footer {
   padding: 2rem 9%;
 }
 body .footer .footer-text p {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
 }
 body .footer .footer-iconTop a {
   position: relative;
@@ -966,5 +971,109 @@ body .footer .footer-iconTop a i {
 @keyframes RotationAbout2 {
   100% {
     transform: translate(-50%, -50%) rotate(-360deg);
+  }
+}
+@media (max-width: 1200px) {
+  html {
+    font-size: 55%;
+  }
+}
+@media (max-width: 991px) {
+  html {
+    font-size: 49%;
+  }
+  body .header {
+    padding: 0 4%;
+  }
+  body .Home {
+    padding: 2rem 5%;
+  }
+  body .footer {
+    padding: 2rem 4%;
+  }
+}
+@media (max-width: 768px) {
+  body .header #menu-icon {
+    display: block;
+  }
+  body .header .navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    padding: 0 4%;
+    background: #0c1621;
+    box-shadow: 0 0.5rem 1rem rgb(0, 0, 0), 0.2;
+  }
+  body .header .navbar a {
+    width: 100%;
+    display: none;
+    font-size: 2rem;
+    margin: 3rem 0;
+  }
+}
+@media (max-width: 520px) {
+  html {
+    font-size: 50%;
+  }
+  body .Home .home-content h1 {
+    display: flex;
+    flex-direction: column;
+  }
+  body .Home .home-content .home-rds a {
+    width: 38px;
+    height: 38px;
+  }
+}
+@media (max-width: 462px) {
+  body .Home .home-content h1 {
+    font-size: 5.2rem;
+  }
+  body .Contact form .input-box .input-field {
+    width: 100%;
+  }
+  body .footer {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  body .footer p {
+    margin-top: 2rem;
+    text-align: center;
+  }
+}
+@media (max-width: 371px) {
+  body .Home {
+    padding-bottom: 15rem;
+    justify-content: center;
+    position: relative;
+  }
+  body .Home .Foto {
+    position: relative; /* Cambiado a relativo para ajustar al flujo normal del documento */
+    margin-top: 40%;
+    margin-bottom: 10%; /* Ajusta la distancia desde la parte superior según sea necesario */
+    left: 40%;
+    width: 35rem;
+    height: 35rem;
+    transform: translateX(-50%);
+  }
+  body .Home .Foto img {
+    width: 30rem;
+    height: 30rem;
+  }
+  body .Home .home-content {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    position: relative;
+  }
+  body .Home .home-rds {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    bottom: -20%;
+  }
+  body .Home .home-rds a {
+    margin: 0 1rem;
   }
 }/*# sourceMappingURL=Styles.css.map */
