--- a/sass-css/Styles.css
+++ b/sass-css/Styles.css
@@ -20,7 +20,7 @@ html {
 }
 
 section {
-  width: 100%;
+  max-width: 100%;
 }
 
 body {
@@ -85,6 +85,7 @@ body .Home {
   flex-wrap: wrap;
   align-items: center;
   padding: 0 10%;
+  z-index: 1;
 }
 body .Home .Foto {
   display: flex;
@@ -138,6 +139,8 @@ body .Home .Foto .circle-spin2 {
 body .Home .home-content {
   width: 100%;
   max-width: 70rem;
+  position: relative;
+  z-index: 2;
 }
 body .Home .home-content #I {
   font-size: 5rem;
@@ -210,7 +213,7 @@ body .Home .btn-box .btn:hover, body .Home .btn-box .btn:active {
 body .Home .home-rds {
   display: flex;
   position: absolute;
-  bottom: 5%;
+  bottom: -30%;
   width: 100%;
   gap: 2rem;
 }
@@ -980,13 +983,13 @@ body .footer .footer-iconTop a i {
 }
 @media (max-width: 991px) {
   html {
-    font-size: 49%;
+    font-size: 50%;
   }
   body .header {
     padding: 0 4%;
   }
   body .Home {
-    padding: 2rem 5%;
+    padding: 2rem 4%;
   }
   body .footer {
     padding: 2rem 4%;
@@ -1027,7 +1030,10 @@ body .footer .footer-iconTop a i {
 }
 @media (max-width: 462px) {
   body .Home .home-content h1 {
-    font-size: 5.2rem;
+    font-size: 5rem;
+  }
+  body .Home .home-content .text-animate h3 {
+    font-size: 3.5rem;
   }
   body .Contact form .input-box .input-field {
     width: 100%;
@@ -1051,14 +1057,14 @@ body .footer .footer-iconTop a i {
     position: relative; /* Cambiado a relativo para ajustar al flujo normal del documento */
     margin-top: 40%;
     margin-bottom: 10%; /* Ajusta la distancia desde la parte superior según sea necesario */
-    left: 40%;
-    width: 35rem;
-    height: 35rem;
+    left: 50%;
+    width: 30rem;
+    height: 30rem;
     transform: translateX(-50%);
   }
   body .Home .Foto img {
-    width: 30rem;
-    height: 30rem;
+    width: 25rem;
+    height: 25rem;
   }
   body .Home .home-content {
     display: flex;
