--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -29,7 +29,7 @@ html {
 }
 
 section {
-  width: 100%;
+  max-width: 100%;
 }
 
 body {
@@ -106,6 +106,7 @@ body {
     flex-wrap: wrap;
     align-items: center;
     padding: 0 10%;
+    z-index: 1;
 
     .Foto {
       display: flex;
@@ -168,6 +169,8 @@ body {
     .home-content {
       width: 100%;
       max-width: 70rem;
+      position: relative;
+      z-index: 2;
 
       #I {
         font-size: 5rem;
@@ -250,7 +253,7 @@ body {
     .home-rds {
       display: flex;
       position: absolute;
-      bottom: 5%;
+      bottom: -30%;
       width: 100%;
       gap: 2rem;
 
@@ -1182,7 +1185,7 @@ body {
 
 @media (max-width: 991px) {
   html {
-    font-size: 49%;
+    font-size: 50%;
   }
 
   body {
@@ -1191,7 +1194,7 @@ body {
     }
 
     .Home {
-      padding: 2rem 5%;
+      padding: 2rem 4%;
     }
 
     .footer {
@@ -1251,11 +1254,17 @@ body {
 }
 
 @media (max-width: 462px) {
+
   body {
     .Home {
       .home-content {
         h1 {
-          font-size: 5.2rem;
+          font-size: 5rem;
+        }
+        .text-animate {
+          h3 {
+            font-size: 3.5rem;
+          }
         }
       }
     }
@@ -1283,6 +1292,8 @@ body {
 }
 
 @media (max-width: 371px) {
+
+  
   body {
     .Home {
       padding-bottom: 15rem;
@@ -1293,16 +1304,15 @@ body {
         position: relative; /* Cambiado a relativo para ajustar al flujo normal del documento */
         margin-top: 40%;
         margin-bottom: 10%; /* Ajusta la distancia desde la parte superior según sea necesario */
-        left: 40%; 
-        width: 35rem;
-        height: 35rem;
+        left: 50%;
+        width: 30rem;
+        height: 30rem;
         transform: translateX(-50%);
-  
+
         img {
-          width: 30rem;
-          height: 30rem;
+          width: 25rem;
+          height: 25rem;
         }
-  
       }
 
       .home-content {
